redesign skills section

--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
           <hr>
         </div>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-7" id="skill">
             <h2><strong>Front-End Developer</strong></h2>
             <h3>I have developed, maintained and launched various projects by using CSS3, Bootstrap, HTML5 and Javascript. Knowledge of open source JS libraries like jQuery </h3> <br>
             <h2><strong>Back-end Developer</strong></h2>
             <h3>Incorporated Python frameworks in my projects such as Django and Flask</h3>
           </div>
           <div class="col-md-1"></div>
-          <div class="col-md-5">
+          <div class="col-md-4 text-right">
             <div class="social">
               <div class="portfolio-item">
                 <div class="hover-bg">
@@ -154,7 +154,7 @@
                   <img src="img/projects/unsplash.png" title="Technologies used: Flask, Heroku, HTML, CSS" rel="prettyPhoto" width="550" class="img-responsive">
                   <H4>This is a cloned web application for unsplash where users can upload and download photos from other users.</H4>
                   <H4>Technologies used: Flask, Heroku, HTML, CSS</H4>
-                  <H4><a href="https://github.com/mwerumuchai/unsplash-clone" target="_blank"><i class="fa fa-github"></i> <span class="site">
+                  <H4><a href="https://github.com/mwerumuchai/unsplash-clone" target="_blank"><i class="fa fa-github"  style="font-size: 50px;"></i> <span class="site">
                 <a href="https://unsplash-clone2.herokuapp.com/" target="_blank">View Site</a></H4>
                   </span>
                 </div>
@@ -187,7 +187,7 @@
                   <img src="img/portfolio/tt-desc2.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" width="550" class="img-responsive">
                   <H4>This is a simple Web application that allows users to track traffic on specified routes.</H4>
                   <H4>Technologies used: Ember, Firebase, GoogleMap, Twitter API</H4>
-                  <H4><a href="https://github.com/mwerumuchai/traffic-tracker" target="_blank"><i class="fa fa-github"></i> <span class="site">
+                  <H4><a href="https://github.com/mwerumuchai/traffic-tracker" target="_blank"><i class="fa fa-github"  style="font-size: 50px;"></i> <span class="site">
                 <a href="https://traffic-tracker-70c62.firebaseapp.com/" target="_blank">View Site</a></H4>
                   </span>
                 </div>
@@ -220,7 +220,7 @@
                   <img src="img/projects/autos.png" title="Technologies used: Django, Heroku, HTML, CSS" rel="prettyPhoto" width="550" class="img-responsive">
                   <H4>This application helps users to view more details about cars and be able to rate them.</H4>
                   <H4>Technologies used: Django, Heroku, HTML, CSS</H4>
-                  <H4><a href="https://github.com/mwerumuchai/autos" target="_blank"><i class="fa fa-github"></i> <span class="site">
+                  <H4><a href="https://github.com/mwerumuchai/autos" target="_blank"><i class="fa fa-github"  style="font-size: 50px;"></i> <span class="site">
                 <a href="https://mweru-autos.herokuapp.com/" target="_blank">View Site</a></H4>
                   </span>
                 </div>
@@ -253,7 +253,7 @@
                   <img src="img/projects/instagram.png" title="Technologies used: Django, Heroku, HTML, CSS,Postgresql" rel="prettyPhoto" width="550" class="img-responsive">
                   <H4>This is a cloned web application for instagram where users can upload photos,download photos from other users and follow other people.</H4>
                   <H4>Technologies used: Django, Heroku, HTML, CSS, Postgresql</H4>
-                  <H4><a href="https://github.com/mwerumuchai/instagram-clone" target="_blank"><i class="fa fa-github"></i> <span class="site">
+                  <H4><a href="https://github.com/mwerumuchai/instagram-clone" target="_blank"><i class="fa fa-github"  style="font-size: 50px;"></i> <span class="site">
                 <a href="https://the-gram-by-mweru.herokuapp.com/" target="_blank">View Site</a></H4>
                   </span>
                 </div>
@@ -286,7 +286,7 @@
                   <img src="img/projects/One-Minute-pitch.png" title="Technologies used: Django, Heroku, HTML, CSS,Postgresql" rel="prettyPhoto" width="550" class="img-responsive">
                   <H4>This is a web application that allows various users to submit a short pitch.</H4>
                   <H4>Technologies used: Django, Heroku, HTML, CSS, Postgresql</H4>
-                  <H4><a href="https://github.com/mwerumuchai/one-minute-pitch" target="_blank"><i class="fa fa-github"></i> <span class="site">
+                  <H4><a href="https://github.com/mwerumuchai/one-minute-pitch" target="_blank"><i class="fa fa-github"  style="font-size: 50px;"></i> <span class="site">
                 <a href="https://minute-pitch.herokuapp.com/" target="_blank">View Site</a></H4>
                   </span>
                 </div>
@@ -320,7 +320,7 @@
                   <img src="img/projects/messageboard.png" title="Technologies used: Django, Heroku, HTML, CSS,Postgresql" rel="prettyPhoto" width="550" class="img-responsive">
                   <H4>Welcome to TRIVIA Q&A. Our quizes provide great information and important facts for kids,teens and adults alike. Test your knowledge!!! Users can add questions, edit them and also answer questions.</H4>
                   <H4>Technologies used: Django, Heroku, HTML, CSS, Postgresql</H4>
-                  <H4><a href="https://github.com/mwerumuchai/message-board" target="_blank"><i class="fa fa-github"></i> <span class="site">
+                  <H4><a href="https://github.com/mwerumuchai/message-board" target="_blank"><i class="fa fa-github"  style="font-size: 50px;"></i> <span class="site">
                 <a href="https://message-boards-36118.firebaseapp.com/" target="_blank">View Site</a></H4>
                   </span>
                 </div>
