--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="col-md-12 text-center"></div>
           <div class="col-md-8 col-md-offset-2">
             <div class="about-text">
-              <h3>I'm a Full Stuck Web Developer and UI/UX specialist. <br>In the basic sense, I solve common and not so common , business problems using design and code.</h3><br>
+              <h3>I'm a Web Developer and UI/UX specialist. <br>In the basic sense, I solve common and not so common , business problems using design and code.</h3><br>
               <h3>I enjoy bridging the gap between engineering and design — combining my technical knowledge with my keen eye for design to create a beautiful product.
                 <br>My goal is to always build applications that are scalable and efficient.</h3> <br>
               <h3>The devil is in the detail, which is why it's important for me to not only be creative but also to pay meticulous attention to detail so my clients get the results they want.</h3>
